--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>DoodleMeeple</title>
+    <script>
+      {/*}
+  function displayMessage (evt) {
+	var message;
+alert(evt.data);
+	
+}
+
+if (window.addEventListener) {
+	// For standards-compliant web browsers
+	window.addEventListener("message", displayMessage, false);
+}
+else {
+	window.attachEvent("onmessage", displayMessage);
+}
+*/}
+    </script>
   </head>
   <body style="margin :0; background:#222">
     <noscript>You need to enable JavaScript to run this app.</noscript>
